--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>Registration form</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Registration Form</h1>
